# bws

./: .gitignore  README.md
Fahrscheinautomaten/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
KapitalBerechnung/: README.md  mainwindow.ui
Kapitalverdopplung/: mainwindow.cpp  mainwindow.h  mainwindow.ui
NetPulse/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
NetPulse/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
NetPulse/docs/: EXTENSION_DEVELOPER_GUIDE.md
NetPulse/docs/manual/: USER_MANUAL.md  capture_screenshots.sh
NetPulse/docs/manual/screenshots/: README.md
NetPulse/plugins/example/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.hpp  example_plugin.json
NetPulse/src/: main.cpp
NetPulse/src/app/: Application.cpp  Application.hpp  SingleInstance.cpp  SingleInstance.hpp
NetPulse/src/core/plugin/: IPlugin.hpp  IPluginContext.hpp  PluginHooks.hpp
NetPulse/src/core/services/: IAlertService.hpp  INotificationService.hpp  IPingService.hpp  IPortScanner.hpp  IScheduledPortScanner.hpp  ISnmpService.hpp
NetPulse/src/core/types/: Alert.cpp  Alert.hpp  Host.cpp  Host.hpp  HostGroup.cpp  HostGroup.hpp  NetworkInterface.cpp  NetworkInterface.hpp  Notification.cpp  Notification.hpp  PingResult.cpp  PingResult.hpp  PortScanResult.cpp  PortScanResult.hpp  ScheduledPortScan.cpp  ScheduledPortScan.hpp  SnmpTypes.cpp  SnmpTypes.hpp
NetPulse/src/infrastructure/api/: RestApiServer.cpp  RestApiServer.hpp
NetPulse/src/infrastructure/config/: ConfigManager.cpp  ConfigManager.hpp
NetPulse/src/infrastructure/crypto/: SecureStorage.cpp  SecureStorage.hpp
NetPulse/src/infrastructure/database/: Database.cpp  Database.hpp  HostGroupRepository.cpp  HostGroupRepository.hpp  HostRepository.cpp  HostRepository.hpp  MetricsRepository.cpp  MetricsRepository.hpp  ScheduledScanRepository.cpp  ScheduledScanRepository.hpp  SnmpRepository.cpp  SnmpRepository.hpp
NetPulse/src/infrastructure/network/: AsioContext.cpp  AsioContext.hpp  PingService.cpp  PingService.hpp  PortScanner.cpp  PortScanner.hpp  ScheduledPortScanner.cpp  ScheduledPortScanner.hpp  SnmpService.cpp  SnmpService.hpp
NetPulse/src/infrastructure/notifications/: HttpClient.cpp  HttpClient.hpp  NotificationService.cpp  NotificationService.hpp
NetPulse/src/infrastructure/plugin/: PluginContext.cpp  PluginContext.hpp  PluginManager.cpp  PluginManager.hpp
NetPulse/src/ui/resources/: AppIcon.cpp  AppIcon.hpp  resources.qrc
NetPulse/src/ui/themes/: DarkTheme.qss  LightTheme.qss  NocTheme.qss
NetPulse/src/ui/widgets/: HostListWidget.cpp  HostListWidget.hpp  LatencyChartWidget.cpp  LatencyChartWidget.hpp  SparklineWidget.cpp  SparklineWidget.hpp  StatusIndicator.cpp  StatusIndicator.hpp
NetPulse/src/ui/widgets/dashboard/: AlertsWidget.cpp  AlertsWidget.hpp  DashboardContainer.cpp  DashboardContainer.hpp  DashboardWidget.cpp  DashboardWidget.hpp  HostStatusWidget.cpp  HostStatusWidget.hpp  LatencyHistoryWidget.cpp  LatencyHistoryWidget.hpp  NetworkOverviewWidget.cpp  NetworkOverviewWidget.hpp  StatisticsWidget.cpp  StatisticsWidget.hpp  TopologyWidget.cpp  TopologyWidget.hpp  WidgetFactory.cpp  WidgetFactory.hpp  WidgetToolbar.cpp  WidgetToolbar.hpp
NetPulse/src/ui/widgets/noc/: NocDisplayWidget.cpp  NocDisplayWidget.hpp  NocHostCard.cpp  NocHostCard.hpp
NetPulse/src/ui/windows/: MainWindow.cpp  MainWindow.hpp  PortScanDialog.cpp  PortScanDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
NetPulse/src/viewmodels/: AlertsViewModel.cpp  AlertsViewModel.hpp  DashboardViewModel.cpp  DashboardViewModel.hpp  HostGroupViewModel.cpp  HostGroupViewModel.hpp  HostMonitorViewModel.cpp  HostMonitorViewModel.hpp  ScheduledScanViewModel.cpp  ScheduledScanViewModel.hpp  SnmpMonitorViewModel.cpp  SnmpMonitorViewModel.hpp
NetPulse/tests/benchmarks/: bench_CoreTypes.cpp  bench_Database.cpp  bench_MetricsRepository.cpp
NetPulse/tests/integration/: test_alert_generation_workflow.cpp  test_data_retention.cpp  test_host_monitoring_lifecycle.cpp  test_multi_host_monitoring.cpp
NetPulse/tests/unit/: test_Alert.cpp  test_AlertFilter.cpp  test_AlertsViewModel.cpp  test_AppBranding.cpp  test_ConfigManager.cpp  test_DashboardWidget.cpp  test_Database.cpp  test_ExtensionDeveloperGuide.cpp  test_Host.cpp  test_HostGroup.cpp  test_HostRepository.cpp  test_MemoryManagement.cpp  test_MetricsRepository.cpp  test_NocHostCard.cpp  test_Notification.cpp  test_NotificationService.cpp  test_PingResult.cpp  test_PingService.cpp  test_PluginSystem.cpp  test_PortScanResult.cpp  test_RestApiServer.cpp  test_ScheduledPortScan.cpp  test_SnmpService.cpp  test_SnmpTypes.cpp  test_SparklineWidget.cpp  test_TopologyWidget.cpp
Notenversetzungsprogramm/: README.md  mainwindow.cpp  mainwindow.ui
Notenversetzungsprogramm/Notenversetzung/: mainwindow.cpp  mainwindow.h
QuadratwurzelHeron/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
